--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@ table {
 }
 #t2
 {
-    background-color: rgba(177, 231, 238, 0.76);
+    background-image: linear-gradient(white ,#d7dbea);
     width: 100%;
     height: 600px;
     text-align: left;
@@ -74,4 +74,13 @@ h2{
 }
 h1 { 
     font-size: 50px;
+}
+div p {
+    text-align: center;
+    color:gray;
+}
+a {
+    color: black;
+    position: relative;
+    left: 92%;
 }
